# face-recognition-benchmarks

./: README.md  pyproject.toml
face_recognition_benchmarks/: base.py  face_recognition_benchmark.py
face_recognition_benchmarks/datasets/lfw/: lfw_cross_validation.py  lfw_parser.py  paths.py
