[tool.poetry]
name = "face-recognition-benchmarks"
version = "0.1.0"
description = ""
authors = ["Vasilev Maxim <vsmaxim8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
face_recognition = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
